Adjustments for all deprecations as of V3.6 and Java 11.